--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
     />
     <script src="https://kit.fontawesome.com/cdda86778c.js" crossorigin="anonymous"></script>
     <link href="http://fonts.cdnfonts.com/css/xcelsion" rel="stylesheet">
+    <style>
+        @import url('http://fonts.cdnfonts.com/css/xcelsion');
+      </style>
+
+
 
     <title>Nasa App</title>
   </head>
